fix glitch where term snippets break in different ways in Firefox and Chrome (had to manually move everything outside of the SVG element); minor style changes (remove extraneous scrollbar on snippets, make new searches open in new window rather than replace current search)

--- a/mysite/static/main.css
+++ b/mysite/static/main.css
@@ -296,7 +296,7 @@ color: #4285F4;
 #snippit{
   text-align: left;
   max-height: 450px;
-  overflow: scroll;
+  overflow: auto;
 }
 .link_to_debate{
   fill: #337ab7;
